--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="title">Etch-A-Sketch!</div>
     <div class='grid-container'>
         <!--create these grid divs with javascript after--> 
-        <div class="grid-item">1</div>
+<!--         <div class="grid-item">1</div>
         <div class="grid-item">2</div>
         <div class="grid-item">3</div>
         <div class="grid-item">4</div>
@@ -268,7 +268,7 @@
         <div class="grid-item">23</div>
         <div class="grid-item">24</div>
         <div class="grid-item">25</div>
-        <div class="grid-item">26</div>
+        <div class="grid-item">26</div> -->
 
     </div>
 </body>
