--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
 <script src='js.js' defer></script>
 <body>
     <div class="title">Etch-A-Sketch!</div>
-    <div id='container'>
-    <!-- grid squares will be placed here -->
-    </div>
+    <div class="grid"></div>
 </body>
 </html>
